# wflow

./: .gitignore  .impeccable.md  .qmlls.ini  BACKLOG.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Pricing.md  README.md  REVIEW.md  build.rs
.github/workflows/: aur-publish.yml  ci.yml  release.yml
docs/: KDL.md  launch-drafts.md
docs/branding/: preview.html
docs/design/: README.md  component-inventory.md  design-brief.md  design-system.md
docs/design/screenshots/: README.md
docs/designs/: explore-page-prototype.html  flow-canvas-prototype.html  v0.3-leg2-positioning.md  v0.4-leg1-trigger-daemon.md  v1.0-sign-in.md
docs/release-notes/: v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v1.0.0.md  v1.0.1.md
examples/: README.md  daily-standup.kdl  dev-setup.kdl  flaky-deploy-trigger.kdl  if-vpn-then.kdl  loop-tab-thru.kdl  morning-sync.kdl  record-replay-export.kdl  screenshot-and-share.kdl
examples/lib/: post-status.kdl  standup-message.kdl
packaging/: README.md
packaging/aur/: push.sh
packaging/aur/wflow/: PKGBUILD
packaging/aur/wflow-bin/: PKGBUILD
packaging/aur/wflow-git/: PKGBUILD
packaging/flatpak/: PR_BODY.md  README.md  SUBMISSION.md  build-local.sh  cargo-config.toml  io.github.cushycush.wflow.desktop  io.github.cushycush.wflow.flathub.yaml  io.github.cushycush.wflow.metainfo.xml  io.github.cushycush.wflow.yaml
packaging/systemd/: wflow-daemon.service
qml/: GlobalLayout.qml  LibraryLayout.qml  Main.qml  RecordLayout.qml  Theme.qml  VisualStyle.qml  WorkflowLayout.qml
qml/components/: ActionRow.qml  Avatar.qml  CategoryChip.qml  CategoryIcon.qml  ChordCaptureDialog.qml  DeeplinkConfirmDialog.qml  DotGrid.qml  EmptyState.qml  FocusRing.qml  GradientPill.qml  IconButton.qml  IntroTutorial.qml  MiniStep.qml  PrimaryButton.qml  PublishDialog.qml  SecondaryButton.qml  SegmentedControl.qml  Sidebar.qml  SidebarWorkflow.qml  StepChipTrail.qml  StyleBadge.qml  TopBar.qml  TutorialCoach.qml  TutorialOverlay.qml  WfConfirmDialog.qml  WfMenu.qml  WfMenuItem.qml  WorkflowIcon.qml
qml/components/chrome/: ChromeFloating.qml  ChromeHybrid.qml  ChromeRail.qml  ChromeSidebar.qml  ChromeTopBar.qml
qml/components/explore/: CategoryPills.qml  CommunityCard.qml  ExploreDetail.qml  ExploreHero.qml  ExploreSearch.qml
qml/components/record/: AmbientRec.qml  ClassicRec.qml  RadialRec.qml  StripRec.qml  TheaterRec.qml
qml/components/workflow/: CardDeck.qml  GroupedPhases.qml  HorizontalTimeline.qml  NewWorkflowDialog.qml  OptionNumberRow.qml  SplitInspector.qml  StepInspectorPanel.qml  StepListRail.qml  StepPalette.qml  WorkflowCanvas.qml  WorkflowLayoutSwitcher.qml
qml/components/workflow/_archive/: CardDeck.qml  HorizontalTimeline.qml  StackList.qml
qml/pages/: ExplorePage.qml  FavoritesPage.qml  LibraryPage.qml  RecordPage.qml  SettingsPage.qml  TriggersPage.qml  WorkflowPage.qml
scripts/: capture-04-shots.sh  capture-screenshots.sh  grab.sh
src/: actions.rs  active_window.rs  catalog.rs  cli.rs  daemon_autostart.rs  daemon_lock.rs  engine.rs  gui_lock.rs  host.rs  kdl_format.rs  main.rs  recorder.rs  scheme_handler.rs  security.rs  state.rs  store.rs  templates.rs  wdo.rs  workflows_meta.rs
src/bridge/: auth.rs  deeplink_inbox.rs  explore.rs  library.rs  mod.rs  recorder.rs  state.rs  workflow.rs
src/cli/: daemon.rs  inspect.rs  lifecycle.rs  mod.rs  run.rs  system.rs
src/kdl_format/: decode.rs  encode.rs  imports.rs  mod.rs
src/triggers/: hyprland.rs  mod.rs  portal.rs  sway.rs
