[package]
name = "wflow"
version = "0.3.3"
edition = "2021"
description = "A CLI workflow engine (and GUI) for Wayland automation"
license = "MIT OR Apache-2.0"
rust-version = "1.77.2"

[[bin]]
name = "wflow"
path = "src/main.rs"

[dependencies]
cxx = "1"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_gui", "qt_qml", "qt_quickcontrols"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kdl = "6"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
sha2 = "0.10"
toml = "0.9"

# Record Mode — portal + libei
ashpd = { version = "0.13", default-features = false, features = ["tokio", "tracing", "remote_desktop", "screencast", "notification"] }
reis = { version = "0.6", features = ["tokio"] }
futures-util = "0.3"

# Input/window engine. Linked in-process (no subprocess shell-out to a
# `wdotool` binary). Default features enable libei + wlroots + kde +
# gnome + uinput; that matches the compositor coverage wflow targets.
wdotool-core = "0.2"

[build-dependencies]
cxx-qt-build = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
