[package]
name = "wflow"
version = "0.3.25"
edition = "2021"
description = "A CLI workflow engine (and GUI) for Wayland automation"
license = "MIT OR Apache-2.0"
rust-version = "1.77.2"

[[bin]]
name = "wflow"
path = "src/main.rs"

[dependencies]
cxx = "1"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_gui", "qt_qml", "qt_quickcontrols"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kdl = "6"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
# Cross-platform Ctrl+C / SIGTERM handler — used by `wflow daemon`
# to clean up Hyprland bindings before exit.
ctrlc = "3"
sha2 = "0.10"
toml = "0.9"

# Record Mode — portal + libei
ashpd = { version = "0.13", default-features = false, features = ["tokio", "tracing", "remote_desktop", "screencast", "notification"] }
reis = { version = "0.6", features = ["tokio"] }
futures-util = "0.3"

# Input/window engine. Linked in-process (no subprocess shell-out to a
# `wdotool` binary). Default features enable libei + wlroots + kde +
# gnome + uinput; that matches the compositor coverage wflow targets.
#
# Pinned to a git rev rather than the published 0.2 because we depend
# on the modifier-state fix in cushycush/wdotool@fad906a — wlroots
# compositors don't auto-derive modifier state from virtual keyboard
# key events, so chord keys (ctrl+l, super+j, …) need an explicit
# vk.modifiers() request that 0.2 doesn't send. Switch back to a
# crates.io version once that fix lands in a published release.
wdotool-core = { git = "https://github.com/cushycush/wdotool", rev = "fad906ac69b59fa24af5523bbe57f8a6cf915f69" }

# evdev fallback for Record Mode on compositors whose portal doesn't
# implement RemoteDesktop (Hyprland, Sway today). Reads /dev/input/event*
# directly, so the user has to be in the `input` group.
evdev = { version = "0.13", features = ["tokio", "stream-trait"] }

[build-dependencies]
cxx-qt-build = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
