[package]
name = "wflow"
version = "0.5.0"
edition = "2021"
description = "A CLI workflow engine (and GUI) for Wayland automation"
license = "MIT OR Apache-2.0"
rust-version = "1.77.2"

[[bin]]
name = "wflow"
path = "src/main.rs"

[dependencies]
cxx = "1"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_gui", "qt_qml", "qt_quickcontrols"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kdl = "6"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
# Cross-platform Ctrl+C / SIGTERM handler — used by `wflow daemon`
# to clean up Hyprland bindings before exit.
ctrlc = "3"
sha2 = "0.10"
toml = "0.9"

# Engine: notify uses ashpd (notification portal). Recording's portal +
# libei pumps now live in wdotool-core's `recorder` module — no direct
# reis / evdev dep here anymore.
ashpd = { version = "0.13", default-features = false, features = ["tokio", "tracing", "notification"] }
# Stream consumer for wdotool_core::recorder::RecorderSession::events().
futures-util = "0.3"

# Input/window engine. Linked in-process (no subprocess shell-out to a
# `wdotool` binary). Default features cover the send-side compositor
# matrix; `recorder` adds the capture-side stream API (XDG portal +
# evdev) that the Record Mode UI consumes.
#
# v0.4.0 absorbed wflow's recorder code — we now consume it as a
# `Stream<Item = RecEvent>` from `wdotool_core::recorder` instead of
# maintaining parallel portal / evdev pumps in this crate.
wdotool-core = { version = "0.4", features = ["libei", "wlroots", "kde", "gnome", "uinput", "recorder"] }

[build-dependencies]
cxx-qt-build = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
